Bug 867121 - Snapped view: Favicons too close to text in awesome screen.r=mbrubeck
UltraBlame original commit: a2eebc32a77ca36c2d0d1a6f06642b589b36144d

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -5823,6 +5823,32 @@ orient
 horizontal
 ;
 }
+[
+viewstate
+=
+"
+snapped
+"
+]
+.
+canSnapTiles
+.
+richgrid
+-
+item
+-
+desc
+{
+-
+moz
+-
+margin
+-
+start
+:
+8px
+;
+}
 /
 *
 if
